<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/date_selector"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/from_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/from"
        android:textColor="@color/navy"
        android:textSize="@dimen/text_large" />

    <Button
        android:id="@+id/choose_from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/from_str"
        android:layout_below="@+id/from_str"
        android:padding="@dimen/margin_small"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium"
        tools:text="2016/01/15" />

    <TextView
        android:id="@+id/to_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_toEndOf="@+id/choose_from_date"
        android:text="@string/to"
        android:textColor="@color/navy"
        android:textSize="@dimen/text_large" />

    <Button
        android:id="@+id/choose_to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/to_str"
        android:layout_below="@+id/to_str"
        android:layout_toEndOf="@+id/choose_from_date"
        android:padding="@dimen/margin_small"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium"
        tools:text="2016/06/15" />

    <Button
        android:id="@+id/done_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/to_str"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/margin_small"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large" />

</RelativeLayout>