<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warmGrayLight"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/eddy_wally" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_small"
                    android:text="@string/analytics_app_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="@dimen/margin_small">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_small"
                    tools:context="metrics.app.com.appmetrics.HomeActivity">

                    <TextView
                        android:id="@+id/noOfDownloadsDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/noOfDownloadsValue"
                        android:layout_alignParentStart="true"
                        android:text="@string/no_of_downloads"
                        android:textColor="@color/navy"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/noOfDownloadsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="..."
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_extra_large"
                        tools:text="2500" />

                    <TextView
                        android:id="@+id/noOfRevenueDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/noOfRevenueValue"
                        android:layout_below="@+id/noOfDownloadsDesc"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:gravity="bottom"
                        android:text="@string/total_revenue"
                        android:textColor="@color/navy"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/noOfRevenueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/noOfDownloadsDesc"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="..."
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_extra_large"
                        tools:text="$ 2500" />

                    <TextView
                        android:id="@+id/platformDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/platformValue"
                        android:layout_below="@+id/noOfRevenueDesc"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:gravity="bottom"
                        android:text="@string/platform"
                        android:textColor="@color/navy"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/platformValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/noOfRevenueDesc"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="..."
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_extra_large" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/explore_more"
                    android:textColor="@color/navy"
                    android:textSize="@dimen/text_extra_large" />

                <TextView
                    android:id="@+id/by_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/navy"
                    android:drawableEnd="@drawable/right_arrow"
                    android:gravity="center"
                    android:padding="@dimen/margin_small"
                    android:text="@string/by_date"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:id="@+id/by_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@color/navy"
                    android:drawableEnd="@drawable/right_arrow"
                    android:gravity="center"
                    android:padding="@dimen/margin_small"
                    android:text="@string/by_country"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_large" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>